# python-prj-template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .coveralls.yml  .gitlab-ci.jsonnet  .gitlab-ci.yml  AUTHORS.rst  Dockerfile  Dockerfile.alpine  LICENSE  MANIFEST.in  Makefile  README.md  config.yaml  requirements.txt  requirements_dev.txt  run-server.sh  run-worker.sh  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.gitlab-ci/: jobs.libsonnet  vars.libsonnet
{{cookiecutter.project_slug}}/conf/: gunicorn.py  logging.conf  logging_debug.conf  logging_json.conf
{{cookiecutter.project_slug}}/deploy/: Dockerfile  {{cookiecutter.project_slug}}.configmap.yaml  {{cookiecutter.project_slug}}.deployment.yaml  {{cookiecutter.project_slug}}.service-monitor.yaml  {{cookiecutter.project_slug}}.service.yaml
{{cookiecutter.project_slug}}/deploy/{{cookiecutter.project_slug}}/: manifest.jsonnet
{{cookiecutter.project_slug}}/deploy/{{cookiecutter.project_slug}}/templates/: {{cookiecutter.project_slug}}-dp.yaml  {{cookiecutter.project_slug}}-svc.yaml
{{cookiecutter.project_slug}}/scripts/: generate-conf-doc.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_apiserver.py  test_fetchdocument.py  test_validateiban.py
{{cookiecutter.project_slug}}/tests/data/: test_config.yaml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  config.py  exception.py  main.py  openapi.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/api/: info.py  {{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/api/middlewares/: errors.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  config.py  exception.py  fetchdocument.py  main.py  validateiban.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: app.py  config.py  flaskapp.py  iban.py  info.py  wsgi.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/handlers/: errors.py  request_logging.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/middlewares/: errors.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/jobs/: celeryconfig.py  runner.py  tasks.py
