[bumpversion]
current_version = {{cookiecutter.version}}
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:VERSION]

[bumpversion:file:{{cookiecutter.project_slug}}/__init__.py]
[bumpversion:file:deploy/{{cookiecutter.project_slug}}/manifest.jsonnet]

[wheel]
universal = 1

[pep8]
exclude = docs
max-line-length = 120

[flake8]
exclude = docs,tests
max-line-length = 120

[tool:pytest]
testpaths = tests/

[coverage:run]
branch = False


[metadata]
name='{{ cookiecutter.project_slug }}',
version='{{cookiecutter.version}}',
description="{{ cookiecutter.project_slug }}",
long_description=readme,
author="{{ cookiecutter.full_name.replace('\"', '\\\"') }}",
author_email='{{ cookiecutter.email }}',
url='{{cookiecutter.git}}',
keywords=
        kubernetes
classifiers=
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        Natural Language :: English

license=Apache License version 2
[options]
python_requres = >=3.6

include_package_data = True
scripts =
        bin/{{ cookiecutter.project_slug }}

package_dir =
        {{ cookiecutter.project_slug }}={{ cookiecutter.project_slug }}
packages =
        {{ cookiecutter.project_slug }}
        {{ cookiecutter.project_slug }}.api
        {{ cookiecutter.project_slug }}.api.handlers
        {{ cookiecutter.project_slug }}.jobs

install_requires=
        flask

zip_safe=False

setup_requires=
        pytest-runner
        celery[redis]
        celery
        requests
        flask
        PyYaml
test_suite=tests

dependency_links=
        https://github.com/requests/requests/tarball/master#egg=requests

tests_require=
    pytest
    coverage
    pytest-cov
    pytest-ordering
    requests-mock
    coverage>=4.0
    flake8
    pytest-flask>=0.10.0
    tox>=2.1.1
    sphinxcontrib-napoleon
    gunicorn>=0.19


[options.packages.find]
where = src
